tests/closure/apply_not_enough_inputs.ca.output
Error occurred:
[tests/closure/apply_not_enough_inputs.ca:7,9] list() | [1, 2]

